[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/SettingMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/visuals/ui/button_icon_set/TextBTN_Big.png" type="Texture" id=2]
[ext_resource path="res://assets/visuals/ui/text/Music.png" type="Texture" id=3]
[ext_resource path="res://assets/visuals/ui/text/Fullscreen.png" type="Texture" id=4]
[ext_resource path="res://assets/visuals/ui/text/Back.png" type="Texture" id=5]

[node name="MainMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = -182.0
margin_right = 105.0
margin_bottom = 390.0
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 542.0
margin_bottom = 1292.0

[node name="MenuOptions" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 422.0
margin_bottom = 1212.0
size_flags_vertical = 3
custom_constants/separation = 30
alignment = 1

[node name="MusicButton" type="CheckButton" parent="VBoxContainer/MenuOptions"]
margin_top = 400.0
margin_right = 422.0
margin_bottom = 520.0
pressed = true
icon = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="VBoxContainer/MenuOptions/MusicButton"]
position = Vector2( 177.598, 46.0642 )
texture = ExtResource( 3 )

[node name="FullscreenButton" type="CheckButton" parent="VBoxContainer/MenuOptions"]
margin_top = 550.0
margin_right = 422.0
margin_bottom = 670.0
icon = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="VBoxContainer/MenuOptions/FullscreenButton"]
position = Vector2( 174.34, 46.4694 )
scale = Vector2( 0.833695, 0.833695 )
texture = ExtResource( 4 )

[node name="BackButton" type="TextureButton" parent="VBoxContainer/MenuOptions"]
margin_top = 700.0
margin_right = 422.0
margin_bottom = 812.0
texture_normal = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="VBoxContainer/MenuOptions/BackButton"]
position = Vector2( 168.776, 43.0042 )
texture = ExtResource( 5 )

